# rpa-toolkit

./: .gitignore  README.md  pyproject.toml
src/etl_toolkit/: __init__.py  excel.py
src/rpa_toolkit/: __init__.py  b64.py  df.py  excel.py  pdf.py
tests/: test_df.py  test_find_header_row.py
