[project]
name = "etl-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fnxL", email = "48607132+fnxL@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.16.0",
    "openpyxl>=3.1.5",
    "polars>=1.34.0",
    "xlsx2csv>=0.8.4",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
